NewArchive/05b5584125dc22eb410705d13884f6cb-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:1:1: error: 'width' does not name a type
 width = FreeImage_GetWidth(handle);
 ^
main.cpp:2:1: error: 'height' does not name a type
 height = FreeImage_GetHeight(handle);
 ^
main.cpp:4:33: error: 'handle' was not declared in this scope
 auto pitch = FreeImage_GetPitch(handle);
                                 ^
main.cpp:4:39: error: 'FreeImage_GetPitch' was not declared in this scope
 auto pitch = FreeImage_GetPitch(handle);
                                       ^
main.cpp:5:1: error: 'BYTE' does not name a type
 BYTE* pixel_it = FreeImage_GetBits(handle);
 ^
main.cpp:6:1: error: expected unqualified-id before 'for'
 for(int y = 0; y < height; y++) {
 ^
main.cpp:6:16: error: 'y' does not name a type
 for(int y = 0; y < height; y++) {
                ^
main.cpp:6:28: error: 'y' does not name a type
 for(int y = 0; y < height; y++) {
                            ^
